fix: project settings menu disappears on narrow page view

--- a/app/assets/stylesheets/_edit.scss
+++ b/app/assets/stylesheets/_edit.scss
@@ -14,7 +14,7 @@ body.projects-update {
     }
   }
   @media only screen and (max-width: 1024px) {
-    .vertical.menu { display: none; }
+    // .vertical.menu { display: none; }
   }
 }
 
